name:                arith
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nobsun/arith#readme
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
copyright:           © 2017, Nobuo Yamashita
category:            Examples
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Expr
                     , Parser
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable arith-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arith
  default-language:    Haskell2010

test-suite arith-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arith
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nobsun/arith
